--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,5 @@ body {
   
   background: var(--Primary-Light);
   overflow-y: scroll;
-  overflow-x: hidden;
   position: relative;
 }
